# canvas-demo

./: .dockerignore  .env.example  .gitattributes  .gitignore  .lychee.toml  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Makefile  README.md  app.py  apprunner.yaml  buildspec.yaml  docker-compose.yml  functions.py  generate.py  processImage.py  pyproject.toml  requirements.txt
.claude/: skill-runs.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: project-roadmap.md
docs/plans/2026-03-25-audit-canvas-demo/: Phase-0.md  Phase-1.md  Phase-2.md  Phase-3.md  Phase-4.md  Phase-5.md  README.md  doc-audit.md  eval.md  feedback.md  health-audit.md
src/: __init__.py
src/canvas_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/handlers/: canvas_handlers.py  health.py
src/models/: config.py
src/services/: aws_client.py  image_processor.py  rate_limiter.py
src/types/: __init__.py  common.py
src/utils/: exceptions.py  lambda_helpers.py  logger.py  validation.py
static/: app.css  error_interceptor.js
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_health_integration.py  test_rate_limiter_integration.py  test_s3_storage_integration.py
tests/unit/: __init__.py  conftest.py  test_aws_client.py  test_canvas_handlers.py  test_config.py  test_exceptions.py  test_health.py  test_image_processor.py  test_lambda_helpers.py  test_logger.py  test_rate_limiter.py  test_validation.py
